# template-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose-dev.yml  compose.yml  pyproject.toml
scripts/: setup_dev_env.sh
src/project_api/: main.py
src/project_api/api/api_v1/: api.py
src/project_api/api/api_v1/endpoints/: hello_world.py
src/project_api/core/: config.py  db.py  logging.py
src/project_api/enums/: base.py  logging.py
src/project_api/models/: __init__.py  base.py  users.py
