[tool.poetry]
name = "project-api"
version = "0.1.0"
description = ""
authors = ["Pythoniste <contact@pythoniste.fr>"]
packages = [{ include = "project_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
fastapi = "0.97.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
black = "23.3.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.py$'

[tool.isort]
src_paths = ["src", "tests"]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["projet_api", "tests"]
